[tool.poetry]
name = "pypactl"
version = "0.1.2"
description = "Sends commands and gets information from PulseAudio."
authors = ["Peter Haight <peterh@giantrabbit.com>"]
license = "GPL-3.0-only"
packages = [
  { include = "pypactl" },
]
repository = "https://github.com/Dawnthorn/pypactl"

[tool.poetry.dependencies]
python = "^3.10"
aioconsole = "^0.5.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
pypactl = "pypactl.pypactl:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
